--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Ian Lukas Simonelli">
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.0/dist/sweetalert2.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Ian Lukas Simonelli - Porftolio</title>
+  <title>Ian Lukas Simonelli - Porfolio</title>
 </head>
 <body>
   <header>
